<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.github.nouish.ezchestshop</groupId>
    <artifactId>ezchestshop-parent</artifactId>
    <version>1.8.2-SNAPSHOT</version>
  </parent>

  <artifactId>ezchestshop-core</artifactId>
  <packaging>jar</packaging>

  <name>EzChestShop Core</name>
  <description>Easy Chest Shop that any server owner wants that for his/her players</description>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>21</release>
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <version>9.0.1</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <commitIdGenerationMode>full</commitIdGenerationMode>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${project.build.outputDirectory}/version.json</generateGitPropertiesFilename>
          <format>json</format>
          <includeOnlyProperties>
            <includeOnlyProperty>git.branch</includeOnlyProperty>
            <includeOnlyProperty>git.build.time</includeOnlyProperty>
            <includeOnlyProperty>git.build.version</includeOnlyProperty>
            <includeOnlyProperty>git.commit.id.abbrev</includeOnlyProperty>
          </includeOnlyProperties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/**</exclude>
                <exclude>**/module-info.class</exclude>
              </excludes>
            </filter>
          </filters>
          <relocations>
            <relocation>
              <pattern>com.github.Anon8281.universalScheduler</pattern>
              <shadedPattern>me.deadlight.ezchestshop.internal.scheduler</shadedPattern>
            </relocation>
            <relocation>
              <pattern>dev.triumphteam.gui</pattern>
              <shadedPattern>me.deadlight.ezchestshop.internal.triumphgui</shadedPattern>
            </relocation>
            <relocation>
              <pattern>de.themoep.minedown</pattern>
              <shadedPattern>me.deadlight.ezchestshop.internal.minedown</shadedPattern>
            </relocation>
            <relocation>
              <pattern>com.zaxxer.hikari</pattern>
              <shadedPattern>me.deadlight.ezchestshop.internal.hikari</shadedPattern>
            </relocation>
            <relocation>
              <pattern>org.bstats</pattern>
              <shadedPattern>me.deadlight.ezchestshop.internal.bstats</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>26.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.21-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <!-- Bundled with Minecraft. Keep version in sync. -->
      <version>2.24.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>3.1.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>dev.triumphteam</groupId>
      <artifactId>triumph-gui</artifactId>
      <version>3.1.11</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.Slimefun</groupId>
      <artifactId>Slimefun4</artifactId>
      <version>RC-37</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>de.themoep</groupId>
      <artifactId>minedown</artifactId>
      <version>1.7.1-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldguard</groupId>
      <artifactId>worldguard-bukkit</artifactId>
      <version>7.0.12</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>6.2.1</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.6</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.palmergames.bukkit.towny</groupId>
      <artifactId>towny</artifactId>
      <version>0.101.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.alex9849.advancedregionmarket</groupId>
      <artifactId>advancedregionmarket</artifactId>
      <version>3.5.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.Anon8281</groupId>
      <artifactId>UniversalScheduler</artifactId>
      <version>0.1.6</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>net.coreprotect</groupId>
      <artifactId>coreprotect</artifactId>
      <version>22.4</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
